ALF-1236: Личные настройки пользователя для поручений
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3222 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-user-profile/share/src/main/webapp/css/lecm-user-profile/user-profile-menu.css
+++ b/lecm-user-profile/share/src/main/webapp/css/lecm-user-profile/user-profile-menu.css
@@ -9,3 +9,6 @@
 #lecm-menu #menu-buttons #menu-buttons-userProfileInstantAbsenceBtn span.first-child {
     background: url('/share/res/images/lecm-user-profile/lecm-user-profile_instant-absence-3.png') no-repeat 4px 4px;
 }
+#lecm-menu #menu-buttons #menu-buttons-userProfileErrandsSettingsBtn span.first-child {
+	background: url('/share/res/images/lecm-user-profile/lecm-user-profile_user-settings-3.png') no-repeat 4px 4px;
+}
