[+] кнопка "Деплой" для Редактора Отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3226 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -102,3 +102,7 @@ div[id*="reports-editor-navigation-toolbar"] .toolbar
     background: url('/share/res/components/images/select-invert-16.png') no-repeat 12px 4px;
     padding-left: 24px;
 }
+
+.datagrid .onActionDeploy a {
+    background-image: url("../../images/lecm-base/components/base/alf_base_osnovnaya_16.png");
+}
