--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/menu.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/menu.css
@@ -14,6 +14,10 @@
     background: url("/share/res/images/lecm-reports-editor/template-edit-32.png") no-repeat scroll 4px 4px;
 }
 
+#lecm-menu #menu-buttons #menu-buttons-deployReportBtn span.first-child {
+    background: url("/share/res/images/lecm-reports-editor/deploy-report_32.png") no-repeat scroll 4px 4px;
+}
+
 #lecm-menu #menu-buttons #menu-buttons-templatesListBtn span.first-child {
     background: url("/share/res/images/lecm-reports-editor/templates-list-32.png") no-repeat scroll 4px 4px;
 }
