Багфикс видимости выпадающего списка в БЖ-дашлете на главной странице
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3276 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
+++ b/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
@@ -9,6 +9,10 @@
 .dashlet.business-journal .toolbar {
     white-space: nowrap;
 }
+.dashlet.business-journal .toolbar .yuimenu .bd {
+    max-height: 200px;
+    overflow: auto;
+}
 .dashlet.business-journal .body .row {
 	line-height: 16px;
 	margin: 10px;
