[~] доработки и переработки Редактора отчета - поправлен функционал (деплоя/редеплоя)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3286 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -106,3 +106,7 @@ div[id*="reports-editor-navigation-toolbar"] .toolbar
 .datagrid .onActionDeploy a {
     background-image: url("../../images/lecm-base/components/base/alf_base_osnovnaya_16.png");
 }
+
+.datagrid .onActionUnDeploy a {
+    background-image: url("/share/res/components/images/header/trashcan.png");
+}
