--- a/lecm-user-profile/share/src/main/webapp/css/lecm-user-profile/user-profile-menu.css
+++ b/lecm-user-profile/share/src/main/webapp/css/lecm-user-profile/user-profile-menu.css
@@ -12,3 +12,6 @@
 #lecm-menu #menu-buttons #menu-buttons-userProfileErrandsSettingsBtn span.first-child {
 	background: url('/share/res/images/lecm-user-profile/lecm-user-profile_user-settings-3.png') no-repeat 4px 4px;
 }
+#lecm-menu #menu-buttons #menu-buttons-userProfileNotificationsSettingsBtn span.first-child {
+	background: url('/share/res/images/lecm-user-profile/lecm-user-profile_user-settings-3.png') no-repeat 4px 4px;
+}
