ALF-1270 : 2.2 Форма карточки поручения (основные сведения) : current version
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3373 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
@@ -7,7 +7,8 @@
     margin-left: 0;
 }
 .metadata-form .set .viewmode-field .viewmode-value > .association-auto-complete-selected-item  {
-    display: inline;
+    display: inline-block;
+    width: 100%;
 }
 
 .yui-skin-lecmTheme div.metadata-form div.form-fields,
@@ -24,6 +25,10 @@
     vertical-align: middle;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+.yui-skin-lecmTheme div.metadata-form div.form-field div.viewmode-field.richtext span.viewmode-value,
+.yui-skin-lecmTheme div.metadata-form div.form-field div.viewmode-field span.viewmode-value.auto-complete {
+    height: auto;
 }
 .yui-skin-lecmTheme div.metadata-form div.form-field div.viewmode-field span.viewmode-label {
     width: 200px;
