ALF-1200: Добавлен дашлет "Мои документы+"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3408 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2374,3 +2374,8 @@ span.person a div.description:empty {
 .alfresco-share .fio-and-photo .yui-u.first {
     width: 250px;
 }
+
+.simple-doclist .icon32 img
+{
+	width: 32px;
+}
