ALF-1270 : 2.2 Форма карточки поручения (основные сведения) : +контролы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3425 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -19,6 +19,10 @@
     max-width: 200px;
     padding-left: 0;
 }
+.yui-skin-lecmTheme .yui-panel .metadata-form-edit div.form-field div.viewmode-field span.viewmode-value .association-auto-complete-selected-item,
+.yui-skin-lecmTheme .yui-panel .metadata-form-edit div.form-field div.viewmode-field span.viewmode-value .association-auto-complete-selected-item-even {
+    overflow: hidden;
+}
 .yui-skin-lecmTheme .yui-panel .metadata-form-edit div.form-field input[type=text],
 .yui-skin-lecmTheme .yui-panel .metadata-form-edit div.form-field div.selectone-control select,
 .yui-skin-lecmTheme .yui-panel .metadata-form-edit div.yui-g div.yui-u div.form-field div.autocomplete-block div.autocompleteCurrentValueDisplayInvisible {
