ALF-1315: Редизайн добавления в избранное
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3468 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-header.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-header.css
@@ -92,3 +92,14 @@
 .unsubscribe-header {
     float: right;
 }
+
+.document-header .document-action .favorite span.first-child {
+	background: url('/share/res/components/images/star-deselected_16x16.png') no-repeat 5px 5px;
+	padding-left: 7px;
+	border: 1px solid;
+}
+.document-header .document-action .favorite.enabled span.first-child {
+	background: url('/share/res/components/images/star-selected_16x16.png') no-repeat 5px 5px;
+	padding-left: 7px;
+	border: 1px solid;
+}
