ALF-1270 : 2.2 Форма карточки поручения (основные сведения): +разделительная линия
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3472 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2409,3 +2409,11 @@ span.person a div.description:empty {
     padding: 0;
     margin: 0 !important;
 }
+
+/* Разделительная линия для формы */
+.form-line {
+    width: 100%;
+    height: 1px;
+    margin: 10px 0 20px;
+    background: #aaa;
+}
