--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -243,11 +243,15 @@
 .list-container {
     padding-left: 40px;
 }
+.list-category {
+    clear: both;
+}
 .list-category-title {
     font-size:20px;
     font-weight:bold;
     color:#666666;
     padding-bottom: 10px;
+    float: left;
 }
 .workflow-task-list-picture {
     background-repeat: no-repeat;
@@ -294,3 +298,19 @@
     margin-top: 20px;
     background: #f2f2f2;
 }
+
+/***********************************************/
+
+.lecm-dashlet-actions .add {
+    background-image: url("/share/res/images/lecm-contracts/alf_contract_add.png");
+    padding-left: 20px;
+    background-repeat: no-repeat;
+    margin-left: 40px;
+}
+
+.lecm-dashlet-actions a,  .dashlet .lecm-dashlet-actions a:hover, .dashlet .lecm-dashlet-actions a:visited {
+    font-weight: normal;
+    font-style: normal;
+    color: #333333;
+}
+
