[~]ALF-1255 9.2 АРМ. Секция «Поручения»
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3489 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-filter.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-filter.css
@@ -1,6 +1,9 @@
 .errands-filter > div {
     margin: 5px;
+}
+.errands-filter {
     overflow: hidden;
+    padding-bottom: 5px;
 }
 .errands-filter > div > label,
 .errands-filter > div > span {
