--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-form.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-form.css
@@ -15,7 +15,8 @@
      margin-top: 5px;
 }
 .yui-skin-lecmTheme div.yui-panel div.form-field > div.autocomplete-block:not(.datagrid):not(.viewmode-field):not(.subscribe),
-.yui-skin-lecmTheme div.yui-panel div.form-field input[type="checkbox"] {
+.yui-skin-lecmTheme div.yui-panel div.form-field input[type="checkbox"],
+.yui-skin-lecmTheme div.yui-panel div.form-fields div.set > span.yui-button {
      margin-left: 200px;
 }
 .yui-skin-lecmTheme div.yui-panel div.form-field.checkbox-control {
