[~]ALF-1237 8.1 Создание копии поручений
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3510 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-header.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-header.css
@@ -103,3 +103,17 @@
 	padding-left: 7px;
 	border: 1px solid;
 }
+
+.document-header .document-action .copy span.first-child {
+    background: url('../../images/lecm-documents/copy_document_16.png') no-repeat 5px 5px;
+    padding-left: 7px;
+    border: 1px solid;
+}
+
+.copy {
+    float: right;
+}
+
+.favorite {
+    float: right;
+}
