ALF-1219: Запросить отмену поручения.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3513 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -12,7 +12,8 @@ ol, ol li {
     padding: 0;
 }
 
-a, a:hover, a:visited {
+a, a:hover, a:visited,
+span.wrapper-title {
     color: #6ca5ce;
     text-decoration: underline;
 }
@@ -2210,7 +2211,8 @@ span.person a div.description:empty {
 }
 #notificationsWindow-body a,
 #notificationsWindow-body a:hover,
-#notificationsWindow-body a:visited {
+#notificationsWindow-body a:visited,
+#notificationsWindow-body span.wrapper-title {
     color: #68a0c8;
     text-decoration: none;
 }
