--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-form.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-form.css
@@ -1,9 +1,19 @@
 /* Диалоговое окно создания\редактирования поручения */
+
+.yui-skin-lecmTheme .yui-panel form.metadata-form-edit div.form-fields .yui-g .yui-u {
+    width: 44.1%;
+}
+.yui-skin-lecmTheme .yui-panel form.metadata-form-edit div.form-fields .yui-g .yui-u.first {
+     width: 54.1%;
+}
+.yui-skin-lecmTheme .yui-panel form.metadata-form-edit div.form-field > label {
+     width: 130px;
+}
 .yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field input[type="text"],
 .yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field div.selectone-control select,
 .yui-skin-lecmTheme div.yui-panel div.form-field div.autocompleteCurrentValueDisplay,
 .yui-skin-lecmTheme div.yui-panel div.form-field div.autocompleteCurrentValueDisplayInvisible {
-     width: 600px;
+     width: 500px;
 }
 .yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.yui-g div.yui-u div.form-field div.autocomplete-block input.autocomplete-input {
      width: 192px;
@@ -15,9 +25,10 @@
      margin-top: 5px;
 }
 .yui-skin-lecmTheme div.yui-panel div.form-field > div.autocomplete-block:not(.datagrid):not(.viewmode-field):not(.subscribe),
+.yui-skin-lecmTheme div.yui-panel div.form-field > div:not(.datagrid):not(.viewmode-field):not(.subscribe),
 .yui-skin-lecmTheme div.yui-panel div.form-field input[type="checkbox"],
 .yui-skin-lecmTheme div.yui-panel div.form-fields div.set > span.yui-button {
-     margin-left: 200px;
+     margin-left: 140px;
 }
 .yui-skin-lecmTheme div.yui-panel div.form-field.checkbox-control {
      text-align: right;
@@ -26,5 +37,5 @@
      margin-left: 0;
 }
 .yui-skin-lecmTheme div.yui-panel div.form-field.checkbox-control label {
-     padding-right: 50px;
+     padding-right: 15px;
 }
