--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-form.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-form.css
@@ -1,5 +1,4 @@
-/* Диалоговое окно создания\редактирования поручения */
-
+/* Диалоговое окно создания поручения */
 .yui-skin-lecmTheme .yui-panel form.metadata-form-edit div.form-fields .yui-g .yui-u {
     width: 44.1%;
 }
@@ -11,8 +10,8 @@
 }
 .yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field input[type="text"],
 .yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field div.selectone-control select,
-.yui-skin-lecmTheme div.yui-panel div.form-field div.autocompleteCurrentValueDisplay,
-.yui-skin-lecmTheme div.yui-panel div.form-field div.autocompleteCurrentValueDisplayInvisible {
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field div.autocompleteCurrentValueDisplay,
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field div.autocompleteCurrentValueDisplayInvisible {
      width: 500px;
 }
 .yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.yui-g div.yui-u div.form-field div.autocomplete-block input.autocomplete-input {
@@ -24,18 +23,23 @@
 .yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field > input.date-entry + a {
      margin-top: 5px;
 }
-.yui-skin-lecmTheme div.yui-panel div.form-field > div.autocomplete-block:not(.datagrid):not(.viewmode-field):not(.subscribe),
-.yui-skin-lecmTheme div.yui-panel div.form-field > div:not(.datagrid):not(.viewmode-field):not(.subscribe),
-.yui-skin-lecmTheme div.yui-panel div.form-field input[type="checkbox"],
-.yui-skin-lecmTheme div.yui-panel div.form-fields div.set > span.yui-button {
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field > div.autocomplete-block:not(.datagrid):not(.viewmode-field):not(.subscribe),
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field > div:not(.datagrid):not(.viewmode-field):not(.subscribe),
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field input[type="checkbox"],
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-fields div.set > span.yui-button {
      margin-left: 140px;
 }
-.yui-skin-lecmTheme div.yui-panel div.form-field.checkbox-control {
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field.checkbox-control {
      text-align: right;
 }
-.yui-skin-lecmTheme div.yui-panel div.form-field.checkbox-control input[type="checkbox"] {
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field.checkbox-control input[type="checkbox"] {
      margin-left: 0;
 }
-.yui-skin-lecmTheme div.yui-panel div.form-field.checkbox-control label {
+.yui-skin-lecmTheme div.yui-panel form.metadata-form-edit div.form-field.checkbox-control label {
      padding-right: 15px;
+}
+
+/* Форма атрибутивного поиска */
+#searchBlock  div.form-field input.formsCheckBox {
+     margin-left: 160px;
 }
