--- a/lecm-jasperreports-forms/repo/src/main/config/reportdefinitions/jreportCommonTemplate.jrxml
+++ b/lecm-jasperreports-forms/repo/src/main/config/reportdefinitions/jreportCommonTemplate.jrxml
@@ -3,8 +3,7 @@
 	<property name="ireport.zoom" value="1.9487171000000025"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="96"/>
-	<property name="dataSource" value="ru.it.lecm.reports.jasper.DSProviderDocflowStatusCounters"/>
-	<property name="dataSource2" value="org.nm.jr.extension.datasource.provider.JRCMISDataSourceProvider"/>
+	<property name="dataSource" value="ru.it.lecm.reports.generators.GenericDSProviderBase"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[($V{REPORT_COUNT}%2 == 0) && false]]></conditionExpression>
@@ -27,7 +26,7 @@
 		<defaultValueExpression><![CDATA["select * from lecm-contract:document as Contract"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="CMIS_XMLCONFIG" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["ds-docflow-counters.xml"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["ds-templateZero.xml"]]></defaultValueExpression>
 	</parameter>
 	<queryString language="SQL">
 		<![CDATA[]]>
