ALF-1246 Переработать секцию "Задачи" Базового документа в соответствии с пунктом 5.6. [~] Подправлен json. [+] Добавлены стили для статусов, подправлен скрипт
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3548 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -181,6 +181,18 @@
 .WORKFLOWTASKPRIORITY_HIGH {
     background-image: url("/share/res/components/images/priority-high-16.png");
 }
+
+.errands-after {
+    color: #cd853f;
+}
+.errands-new {
+    color: #008000;
+}
+.errands-overdue {
+     color: red;
+ }
+
+
 .workflow-date {
     font-size: 12px;
     font-weight: bold;
