ALF-1271 : Форма поручения (главная форма)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3571 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2419,3 +2419,10 @@ span.person a div.description:empty {
     margin: 10px 0 20px;
     background: #aaa;
 }
+
+/* Текст, обрезанный многоточием */
+.text-cropped {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
