--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
@@ -2,6 +2,11 @@
     width: 93%;
     margin: 20px 0 0 3.99%;
 }
+.errands-main-form a,
+.errands-main-form a:hover,
+.errands-main-form a:visited {
+    color: #6ca5ce !important;
+}
 .yui-skin-lecmTheme div.metadata-form.errands-main-form .form-fields {
     width: auto;
     padding-left: 0;
@@ -36,14 +41,17 @@
 .errands-main-form .form-fields .times {
     color: #999;
 }
-.errands-main-form .form-fields .times span {
+.errands-main-form .form-fields .times span,
+.errands-main-form .form-fields .descr span {
     color: #333;
     font-weight: bold;
 }
-.errands-main-form .form-fields .data-list-block {
-    margin: 10px;
+.errands-main-form .form-fields .data-list-block,
+.errands-main-form .form-fields .exec-report {
+    margin: 15px;
 }
-.errands-main-form .form-fields .data-list-block span.heading {
+.errands-main-form .form-fields .data-list-block span.heading,
+.errands-main-form .form-fields span.heading {
     font-size: 16px;
 }
 .errands-main-form .form-fields .data-list-block span.yui-button {
@@ -59,9 +67,34 @@
     margin: 0 4px -4px 0;
     cursor: pointer;
 }
-.errands-main-form .form-fields .data-list-block ul.data-list li span {
+.errands-main-form .form-fields .data-list-block ul.data-list li .descr {
     margin-left: 10px;
     color: #999;
+}
+.errands-main-form .form-fields .data-list-block ul.persons-list li {
+    margin: 12px 0;
+    overflow: hidden;
+}
+.errands-main-form .form-fields .data-list-block ul.persons-list li div.avatar,
+.errands-main-form .form-fields .data-list-block ul.persons-list li div.person {
+    float: left;
+}
+.errands-main-form .form-fields .data-list-block ul.persons-list li div.avatar img {
+    width: 32px;
+    height: 32px;
+}
+.errands-main-form .form-fields .data-list-block ul.persons-list li div.person {
+    margin: -5px 0 0 15px;
+    line-height: 24px;
+}
+.errands-main-form .form-fields .data-list-block ul.persons-list li div.person div.position {
+    margin-left: 10px;
+    color: #999;
+}
+.errands-main-form .form-fields .data-list-block ul.persons-list li div.person span.text-cropped {
+    max-width: 200px;
+    display: inline-block;
+    vertical-align: top;
 }
 .errands-main-form .line {
     width: 100%;
@@ -74,18 +107,34 @@
     font-size: 16px;
     margin-bottom: 10px;
 }
-.errands-main-form .form-fields {
-
+.errands-main-form .form-fields .dnd-uploader {
+    float: right;
 }
-.errands-main-form .form-fields {
-
+.errands-main-form .form-fields .dnd-uploader div.uploader-block {
+    margin: 0 !important;
 }
-.errands-main-form .form-fields {
-
+.errands-main-form .form-fields .exec-report {
+    overflow: hidden;
 }
-.errands-main-form {
-
+.errands-main-form .form-fields .exec-report .heading {
+    padding-left: 1em;
 }
-.errands-main-form {
-
+.errands-main-form .form-fields .exec-report div {
+    margin-top: 10px;
 }
+.errands-main-form .form-fields .exec-report div:first-of-type {
+    float: left;
+    margin: 10px 10px 0 30px;
+}
+.errands-main-form .form-fields .exec-report div textarea {
+    width: 500px;
+    height: 70px;
+    resize: none;
+}
+.errands-main-form .form-fields .exec-report div > span.yui-button:first-of-type {
+    margin-bottom: 14px;
+}
+.errands-main-form .form-fields .exec-report button {
+    width: 90px;
+}
+
