ALF-1390 Доработать дашлет "Выданные мной поручения"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3582 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
@@ -38,3 +38,7 @@
     color: #68a0c8;
     font-weight: bold;
 }
+
+.dashlet .titleBarActions .arm {
+    background-image: url('/share/res/images/lecm-errands/arm.png');
+}
