ALF-1271 : Форма поручения (главная форма) : форма для dnd
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3589 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
@@ -113,6 +113,9 @@
 .errands-main-form .form-fields .dnd-uploader div.uploader-block {
     margin: 0 !important;
 }
+.yui-skin-lecmTheme div.metadata-form.errands-main-form div.dnd-uploader div.form-fields > div.set {
+    width: auto;
+}
 .errands-main-form .form-fields .exec-report {
     overflow: hidden;
 }
