--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -252,6 +252,15 @@
     padding-top: 5px;
     padding-bottom: 40px;
 }
+
+.workflow-task-line {
+    border-top: 1px solid #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+}
+
 .list-container {
     padding-left: 40px;
 }
@@ -264,6 +273,12 @@
     color:#666666;
     padding-bottom: 10px;
     float: left;
+}
+.list-category-title-subordinate {
+    font-size:20px;
+    font-weight:bold;
+    color:#666666;
+    padding-bottom: 10px;
 }
 .workflow-task-list-picture {
     background-repeat: no-repeat;
