--- a/lecm-semantic-assist/share/src/main/webapp/css/semantic-assist/semantic-dashlet.css
+++ b/lecm-semantic-assist/share/src/main/webapp/css/semantic-assist/semantic-dashlet.css
@@ -12,3 +12,23 @@
 .dashlet .lecm-dashlet-actions .semantic-list:active {
     opacity: 1;
 }
+
+.semantic-button-grey {
+    margin: 5px 0;
+    padding: 3px 0;
+    border: 1px solid transparent;
+    cursor: pointer;
+    font: 14px Arial;
+    font-style: normal;
+    text-decoration: none;
+	color:#333333;
+}
+
+.semantic-button-grey:hover {
+    background-color: #ddd;
+    border: 1px solid #999;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+	color:#333333;
+}
