--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2426,3 +2426,45 @@ span.person a div.description:empty {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+/************/
+/* УЗД и ЭП */
+/************/
+.signs-header {
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.signs-subheader {
+	font-style: italic;
+}
+
+.signs-row {
+	padding: 10px 65px 10px 10px;
+	position: relative;
+}
+
+.signs-row:hover {
+	background-color: #eee;
+	border-radius: 4px;
+}
+
+.signs-row:last-child {
+	margin-bottom: 10px;
+}
+
+.signs-row .chain-link {
+	background: url(images/chain-link.png) no-repeat center center;
+	width: 38px;
+	height: 16px;
+	position: absolute;
+	right: 15px;
+	top: 50%;
+	margin-top: -8px;
+	opacity: 0.5;
+}
+
+.signs-row .chain-link:hover {
+	cursor: pointer;
+	opacity: 1;
+}
