Редактор Отчетов: реализован функционал "Новый шаблон на основе нд" и добавлена возможность выгружать файл-шаблона
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3630 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -110,3 +110,8 @@ div[id*="reports-editor-navigation-toolbar"] .toolbar
 .datagrid .onActionUnDeploy a {
     background-image: url("/share/res/components/images/header/trashcan.png");
 }
+
+.datalist-toolbar .export-template button {
+    background: url("../../images/lecm-dictionary/xml-file-16.png") no-repeat scroll 5px 5px transparent;
+    cursor: pointer;
+}
