УЗД: [+] Скроллбар при большом количестве подписей на сокращённой форме подписей.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3631 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2430,6 +2430,12 @@ span.person a div.description:empty {
 /************/
 /* УЗД и ЭП */
 /************/
+.signs-wrapper {
+	max-height: 450px;
+	overflow-y: scroll;
+	margin-bottom: 10px;
+}
+
 .signs-header {
 	font-weight: bold;
 	margin-bottom: 10px;
