ALF-1271 : Форма поручения (главная форма) : иконки на вложениях и ссылках
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3636 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
@@ -63,7 +63,7 @@
 .errands-main-form .form-fields .data-list-block ul.data-list li {
     line-height: 30px;
 }
-.errands-main-form .form-fields .data-list-block ul.data-list li img.remove-icon {
+.errands-main-form .form-fields .data-list-block ul.data-list li img.file-icon {
     margin: 0 4px -4px 0;
     cursor: pointer;
 }
