--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
@@ -40,6 +40,7 @@
 }
 .errands-main-form .form-fields .times {
     color: #999;
+    margin-top: 15px;
 }
 .errands-main-form .form-fields .times span,
 .errands-main-form .form-fields .descr span {
