--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2419,6 +2419,13 @@ span.person a div.description:empty {
     margin: 10px 0 20px;
     background: #aaa;
 }
+/* Линия для добавления после текста  */
+.form-text-underline {
+    width: 100%;
+    height: 1px;
+    margin: 3px 0 10px;
+    background: #aaa;
+}
 
 /* Текст, обрезанный многоточием */
 .text-cropped {
