--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2481,3 +2481,29 @@ span.person a div.description:empty {
 	cursor: pointer;
 	opacity: 1;
 }
+
+.signs-refresh {
+	background: url(images/refresh.png) no-repeat center center;
+	width: 38px;
+	height: 38px;
+	float: right;
+	margin-right: 15px;
+
+	opacity: 0.5;
+
+	-webkit-transition: all 0.5s ease-in-out;  /* Chrome 1-25, Safari 3.2+ */
+	-moz-transition: all 0.5s ease-in-out;  /* Firefox 4-15 */
+	-o-transition: all 0.5s ease-in-out;  /* Opera 10.50–12.00 */
+	transition: all 0.5s ease-in-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+}
+
+.signs-refresh:hover {
+	cursor: pointer;
+	opacity: 1;
+
+	-webkit-transform: rotate(-90deg);  /* Chrome, Safari 3.1+ */
+	-moz-transform: rotate(-90deg);  /* Firefox 3.5-15 */
+	-ms-transform: rotate(-90deg);  /* IE 9 */
+	-o-transform: rotate(-90deg);  /* Opera 10.50-12.00 */
+	transform: rotate(-90deg);  /* Firefox 16+, IE 10+, Opera 12.10+ */
+}
