--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-menu.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-menu.css
@@ -13,3 +13,7 @@
 #lecm-menu #menu-buttons-tasksBtn span.first-child {
     background: url('/share/res/images/lecm-contracts/alf_contracts_main_32.png') no-repeat 4px 4px;
 }
+
+#lecm-menu #menu-buttons #menu-buttons-archiveBtn span.first-child {
+    background: url('/share/res/images/lecm-contracts/alf_contracts_list_32.png') no-repeat 4px 4px;
+}
