--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/docflow-timings/docflow-timings.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/docflow-timings/docflow-timings.jrxml
@@ -34,35 +34,35 @@
 	<field name="col_Count1" class="java.lang.Integer">
 		<fieldDescription><![CDATA[Статус1.Кол-во]]></fieldDescription>
 	</field>
-	<field name="col_Count3" class="java.lang.Integer">
-		<fieldDescription><![CDATA[Статус3.Кол-во]]></fieldDescription>
-	</field>
 	<field name="col_Count2" class="java.lang.Integer">
 		<fieldDescription><![CDATA[Статус2.Кол-во]]></fieldDescription>
 	</field>
-	<field name="col_Count5" class="java.lang.Integer">
-		<fieldDescription><![CDATA[Статус5.Кол-во]]></fieldDescription>
+	<field name="col_Count3" class="java.lang.Integer">
+		<fieldDescription><![CDATA[Статус3.Кол-во]]></fieldDescription>
 	</field>
 	<field name="col_Count4" class="java.lang.Integer">
 		<fieldDescription><![CDATA[Статус4.Кол-во]]></fieldDescription>
 	</field>
-	<field name="col_Count7" class="java.lang.Integer">
-		<fieldDescription><![CDATA[Статус7.Кол-во]]></fieldDescription>
-	</field>
-	<field name="col_Count10" class="java.lang.Integer">
-		<fieldDescription><![CDATA[Статус10.Кол-во]]></fieldDescription>
+	<field name="col_Count5" class="java.lang.Integer">
+		<fieldDescription><![CDATA[Статус5.Кол-во]]></fieldDescription>
 	</field>
 	<field name="col_Count6" class="java.lang.Integer">
 		<fieldDescription><![CDATA[Статус6.Кол-во]]></fieldDescription>
 	</field>
-	<field name="col_Count9" class="java.lang.Integer">
-		<fieldDescription><![CDATA[Статус9.Кол-во]]></fieldDescription>
-	</field>
-	<field name="col_Count11" class="java.lang.Integer">
-		<fieldDescription><![CDATA[СтатусДругие.Кол-во]]></fieldDescription>
+	<field name="col_Count7" class="java.lang.Integer">
+		<fieldDescription><![CDATA[Статус7.Кол-во]]></fieldDescription>
 	</field>
 	<field name="col_Count8" class="java.lang.Integer">
 		<fieldDescription><![CDATA[Статус8.Кол-во]]></fieldDescription>
+	</field>
+	<field name="col_Count9" class="java.lang.Integer">
+		<fieldDescription><![CDATA[Статус9.Кол-во]]></fieldDescription>
+	</field>
+	<field name="col_Count10" class="java.lang.Integer">
+		<fieldDescription><![CDATA[Статус10.Кол-во]]></fieldDescription>
+	</field>
+	<field name="col_Count11" class="java.lang.Integer">
+		<fieldDescription><![CDATA[СтатусДругие.Кол-во]]></fieldDescription>
 	</field>
 	<field name="col_RowTag" class="java.lang.String">
 		<fieldDescription><![CDATA[Измерение.Название]]></fieldDescription>
@@ -155,14 +155,14 @@
 				</textElement>
 				<textFieldExpression><![CDATA["Черновик"]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="8ad34c1a-0436-4c27-9c1b-a84c2d955145" x="195" y="2" width="33" height="75"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Проект"]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="0d56e8f5-5867-4897-97ab-c9f00c452f45" x="230" y="2" width="33" height="75"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
