--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
@@ -42,3 +42,7 @@
 .dashlet .titleBarActions .arm {
     background-image: url('/share/res/images/lecm-errands/arm.png');
 }
+
+.expired {
+    color: #cd853f;
+}
