--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata.css
@@ -11,3 +11,11 @@
 .dashlet-metadata .form-fields .form-field .viewmode-field {
     margin: 0;
 }
+
+.widget-bordered-panel .association-auto-complete-selected-item {
+    display:inline;
+}
+
+.widget-bordered-panel div.association-auto-complete-selected-item > span > a, div.association-auto-complete-selected-item-even > span > a, div.association-auto-complete-selected-item > span.not-person, div.association-auto-complete-selected-item-even > span.not-person {
+    overflow-x: inherit;
+}
