--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
@@ -26,10 +26,12 @@
 }
 .dashlet.issued-errands .body .row .column.second {
     margin: 0 0 0 10px;
+    float: left;
 }
 .dashlet.issued-errands .body .row .column.third {
     margin: 0 0 0 5px;
     color: red;
+    float:left;
 }
 
 .grid .dashlet.issued-errands .body .row .column.second a,
