--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-executor/exec-discipline-by-executor.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-executor/exec-discipline-by-executor.jrxml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="exec-discipline-by-producer" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="28e61b22-f23c-49c3-ba14-4928c3b8793a">
+<jasperReport
+		xmlns="http://jasperreports.sourceforge.net/jasperreports"
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports
+		http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" 
+		name="exec-discipline-by-executor"
+		pageWidth="842" pageHeight="595" 
+		orientation="Landscape" whenNoDataType="AllSectionsNoDetail"
+		columnWidth="802" 
+		leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" 
+		uuid="28e61b22-f23c-49c3-ba14-4928c3b8793a">
+
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<property name="dataSource" value="ru.it.lecm.reports.generators.GenericDSProviderBase"/>
+	<property name="dataSource" value="ru.it.lecm.reports.generators.errands.ErrandsDisciplineDSProvider"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#FFFFFF">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
@@ -26,16 +37,25 @@
 		<defaultValueExpression><![CDATA["select * from lecm-contract:document as Contract"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="CMIS_XMLCONFIG" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["ds-exec-discipline-by-producer.xml"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["ds-exec-discipline-by-executor.xml"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="Col_Param_Executor" class="java.lang.String">
-		<fieldDescription><![CDATA[Исполнитель-сотрудник]]></fieldDescription>
+	<field name="Col_GroupBy" class="java.lang.String">
+		<fieldDescription><![CDATA[Способ группировки]]></fieldDescription>
+	</field>
+	<field name="Col_NameTag" class="java.lang.String">
+		<fieldDescription><![CDATA[Название]]></fieldDescription>
+	</field>
+	<field name="Col_Period" class="java.util.Date">
+		<fieldDescription><![CDATA[Период с-по]]></fieldDescription>
+	</field>
+	<field name="Col_Param_Person" class="java.lang.String">
+		<fieldDescription><![CDATA[Исполнитель (сотрудник)]]></fieldDescription>
 	</field>
 	<field name="Col_Param_Exec_OrgUnit" class="java.lang.String">
-		<fieldDescription><![CDATA[Исполнителняющее подразделение]]></fieldDescription>
+		<fieldDescription><![CDATA[Подразделение исполнителя]]></fieldDescription>
 	</field>
 	<field name="Col_Count_Total" class="java.lang.Integer">
 		<fieldDescription><![CDATA[Выдано всего поручений за период]]></fieldDescription>
@@ -49,17 +69,20 @@
 	<field name="Col_Count_Closed_important" class="java.lang.Integer">
 		<fieldDescription><![CDATA[Закрытых важных поручений за период]]></fieldDescription>
 	</field>
-	<field name="Col_Percents_Intime" class="java.lang.Float">
-		<fieldDescription><![CDATA[Процент исполнения в срок]]></fieldDescription>
+	<field name="Col_Count_Intime" class="java.lang.Integer">
+		<fieldDescription><![CDATA[Кол-вот исполнений в срок]]></fieldDescription>
 	</field>
-	<field name="Col_Percents_Boss_Refused" class="java.lang.Float">
-		<fieldDescription><![CDATA[Процент поручений, отклонённых руководителем]]></fieldDescription>
+	<field name="Col_Count_Boss_Refused" class="java.lang.Integer">
+		<fieldDescription><![CDATA[Кол-во поручений, отклонённых руководителем]]></fieldDescription>
 	</field>
 	<field name="Col_Count_Important_Refused" class="java.lang.Integer">
 		<fieldDescription><![CDATA[Кол-во важных поручений, неисполненных в срок]]></fieldDescription>
 	</field>
-	<field name="Col_Days_Avg_Execution" class="java.lang.Float">
+	<field name="Col_Avg_Execution.Value" class="java.lang.Float">
 		<fieldDescription><![CDATA[Среднее время исполнения поручения, дн]]></fieldDescription>
+	</field>
+	<field name="Col_Avg_Execution.Units" class="java.lang.String">
+		<fieldDescription><![CDATA[Единицы измерения среднего времени исполнения]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
@@ -71,7 +94,7 @@
 				<textElement>
 					<font fontName="DejaVu Sans" size="20" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[Испольнительская дисциплина по Исполнителям]]></text>
+				<text><![CDATA[Исполнительская дисциплина по Исполнителям]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -146,7 +169,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Среднее время исполнения поручения, дн"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Среднее время исполнения поручения"]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
@@ -167,50 +190,79 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{Col_Param_Executor}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[($F{Col_NameTag} != null ? $F{Col_NameTag} : "")]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="6b3e2eae-fad6-4b12-9bb4-3b6de9ef6b72" x="145" y="2" width="110" height="26"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{Col_Count_Total}+ "(" + $F{Col_Count_Total_Important}+ ")"]]></textFieldExpression>
+					<textFieldExpression><![CDATA[($F{Col_Count_Total} != null ? $F{Col_Count_Total} : "0")
++ "("
+	+ ($F{Col_Count_Total_Important} != null ? $F{Col_Count_Total_Important} : "0")
++ ")"]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="2d7f69b0-3314-43ef-864a-2a4a31a6f048" x="255" y="2" width="110" height="26"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{Col_Count_Closed}+ "(" + $F{Col_Count_Closed_important}+ ")"]]></textFieldExpression>
+					<textFieldExpression><![CDATA[($F{Col_Count_Closed} != null ? $F{Col_Count_Closed} : "0")
++ "("
+	+ ( $F{Col_Count_Closed_important} != null ? $F{Col_Count_Closed_important} : "0")
++ ")"]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="c8693afa-5d3a-458c-ad08-153c697f4751" x="365" y="2" width="110" height="26"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{Col_Percents_Intime}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[(	(	$F{Col_Count_Total} != null
+		&& $F{Col_Count_Total} != 0
+		&& $F{Col_Count_Intime} != null
+	)
+	? msg( "{0,number,percent}", 1.0*$F{Col_Count_Intime}/$F{Col_Count_Total})
+	: "0"
+)]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="41545a1f-7be5-447e-a33d-bf03b018c83a" x="475" y="2" width="110" height="26"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{Col_Percents_Boss_Refused}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[(	(	$F{Col_Count_Total} != null
+		&& $F{Col_Count_Total} != 0
+		&& $F{Col_Count_Boss_Refused} != null
+	)
+	? msg( "{0,number,percent}", 1.0*$F{Col_Count_Boss_Refused}/$F{Col_Count_Total})
+	: "0"
+)]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="7ac26120-8a22-4904-8c83-d3791b40a979" x="585" y="2" width="110" height="26"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{Col_Count_Important_Refused}/$F{Col_Count_Total_Important}
-+ "(" + $F{Col_Count_Important_Refused}+ ")"]]></textFieldExpression>
+					<textFieldExpression><![CDATA[( (	$F{Col_Count_Total_Important} != null
+	&& $F{Col_Count_Total_Important} != 0
+	&& $F{Col_Count_Important_Refused} != null
+   )
+	? msg( "{0,number,percent}", 1.0*$F{Col_Count_Important_Refused}/$F{Col_Count_Total_Important})
+	: "0"
+)
++ "("
+	+ ($F{Col_Count_Important_Refused} != null	? $F{Col_Count_Important_Refused} : "0")
++ ")"]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="395d5b94-f71f-4c51-b3cd-7979b971cd7b" x="695" y="2" width="100" height="26"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{Col_Days_Avg_Execution}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[($F{Col_Avg_Execution.Value} != null
+	? $F{Col_Avg_Execution.Value} + ($F{Col_Avg_Execution.Units} != null ? " "+ $F{Col_Avg_Execution.Units} : "")
+	: "0"
+)]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
