[+ALF-1375  Справочные значения в "Основных сведениях" переносятся на другую строку
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3805 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -341,3 +341,7 @@
     color: #333333;
 }
 
+.dashlet-metadata div.association-auto-complete-selected-item, .dashlet-metadata div.association-auto-complete-selected-item-even {
+    display: inline;
+}
+
