ALF-1419 Редизайн дашлета "мои поручения"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3819 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
@@ -49,3 +49,23 @@
     color: #cd853f;
     display: inline;
 }
+
+.body.scrollableList .my-errands .yui-dt-liner.image {
+    padding: 4px 0;
+}
+
+.body.scrollableList .my-errands tr.yui-dt-rec.yui-dt-odd {
+    background-color: #FFFFFF;
+}
+
+.body.scrollableList .my-errands td.image {
+    width: 16px;
+}
+
+.body.scrollableList .my-errands td {
+    border-bottom: 1px dashed #D9D9D9;
+}
+
+.body.scrollableList .my-errands {
+    width: 100%;
+}
