Иконки в меню подписи для документа, вложения документа и cm:content.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3843 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -345,3 +345,14 @@
     display: inline;
 }
 
+.document-components-panel .alfresco-twister-actions .refresh {
+    background-image: url(/share/res/themes/lecmTheme/images/refresh.png);
+    display: none;
+    opacity: .8;
+}
+.document-components-panel .alfresco-twister:hover .alfresco-twister-actions .refresh {
+    display: inline;
+}
+.document-components-panel .alfresco-twister-actions .refresh:active {
+    opacity: 1;
+}
